# fn-dragon-solitaire

./: .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .gitlab-ci.yml  .lintstagedrc.json  .npmrc  .prettierignore  .prettierrc.json  .whitesource  CMakeLists.txt  README.md  actions.md  import-sorter.json  local-jar.sh  package-lock.json  package.json  tsconfig.json  wip-site.sh
ap/: ap-overlay.ts  ap.ts  particle.ts
docs/: SERVER_CLIENT_FLOW.md
font_workspaces/: villitkakkoset_bold.bmfont  villitkakkoset_bold.fsworkspace  villitkakkoset_super.bmfont  villitkakkoset_super.fsworkspace
history/: 2gamble-lose.json  3oak-hi-hi-l.json  4deuces-w.json  4ok-w.json  asd.json  basegame-max-win.json  basegame_no_win.json  foo.json  freespin-gamble-lose.json  freespin-max-win.json  freespin-normal-win-take.json  gamble-1win-return.json  (+14 more)
slotmachine/: CMakeLists.txt  GameParameters.json
slotmachine/common/menu/: 1x1.webm  1x2.webm  2x2.webm  features_1x1.webm  features_2x2.webm
slotmachine/hertta/: gfx_ps.xml  window_settings.json
slotmachine/hertta/emulator/: window_settings.json
slotmachine/hertta/theme/: fx_definitions.json  screensaver.webm
slotmachine/voitto/: gfx_pp.xml  window_settings.json
slotmachine/voitto/emulator/: window_settings.json
slotmachine/voitto/theme/: fx_config.json  fx_definitions.json  screensaver.webm
slotmachine/voltti/: window_settings.json
slotmachine/voltti/emulator/: window_settings.json
slotmachine/voltti/theme/: fx_definitions.json  screensaver.webm  topscreenlogo.webm
slotmachine/voltti/upper_voltti/: index.html
(+355 files in other folders)
